--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,3 +1,4 @@
+tap "bufbuild/buf"
 tap "buo/cask-upgrade"
 tap "homebrew/bundle"
 tap "homebrew/cask"
@@ -6,24 +7,37 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "jesseduffield/lazygit"
 tap "ngrok/ngrok"
+tap "oven-sh/bun"
 tap "planetscale/tap"
 tap "stripe/stripe-cli"
 tap "supabase/tap"
+brew "aircrack-ng"
 brew "fd"
 brew "gh"
 brew "git"
 brew "git-lfs"
 brew "gnu-sed"
+brew "unbound"
+brew "gnutls"
+brew "hashcat"
+brew "hcxtools"
 brew "lcdf-typetools"
+brew "make"
 brew "mas"
 brew "mysql"
 brew "mysql-client"
 brew "neovim"
+brew "openssl@1.1"
 brew "ripgrep"
+brew "rust"
 brew "starship"
 brew "stow"
 brew "tmux"
+brew "watchman"
+brew "wireshark"
+brew "bufbuild/buf/buf"
 brew "jesseduffield/lazygit/lazygit"
+brew "oven-sh/bun/bun"
 brew "planetscale/tap/pscale"
 brew "stripe/stripe-cli/stripe"
 brew "supabase/tap/supabase"
@@ -33,3 +47,69 @@ cask "iterm2"
 cask "linearmouse"
 cask "ngrok"
 cask "raycast"
+cask "wezterm"
+mas "Amphetamine", id: 937984704
+mas "Keynote", id: 409183694
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
+mas "rcmd", id: 1596283165
+mas "Save to Matter", id: 1548677272
+mas "Save to Raindrop.io", id: 1549370672
+mas "Sequel Ace", id: 1518036000
+mas "Spark", id: 1176895641
+mas "Webull Desktop", id: 1334590352
+mas "WhatsApp", id: 1147396723
+mas "Xcode", id: 497799835
+vscode "alefragnani.project-manager"
+vscode "astro-build.astro-vscode"
+vscode "austenc.tailwind-docs"
+vscode "bradlc.vscode-tailwindcss"
+vscode "bungcip.better-toml"
+vscode "csstools.postcss"
+vscode "DanielPriestley.poimandres-alternate"
+vscode "dbaeumer.vscode-eslint"
+vscode "dsznajder.es7-react-js-snippets"
+vscode "eamodio.gitlens"
+vscode "ecmel.vscode-html-css"
+vscode "Equinusocio.vsc-material-theme"
+vscode "equinusocio.vsc-material-theme-icons"
+vscode "esbenp.prettier-vscode"
+vscode "formulahendry.auto-close-tag"
+vscode "formulahendry.auto-rename-tag"
+vscode "formulahendry.code-runner"
+vscode "GitHub.copilot"
+vscode "idleberg.applescript"
+vscode "IronGeek.vscode-env"
+vscode "matt-meyers.vscode-dbml"
+vscode "mattpocock.ts-error-translator"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-python.isort"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode.powershell"
+vscode "nhoizey.gremlins"
+vscode "Orta.vscode-twoslash-queries"
+vscode "PKief.material-icon-theme"
+vscode "pmndrs.pmndrs"
+vscode "Prisma.prisma"
+vscode "Prisma.prisma-insider"
+vscode "rangav.vscode-thunder-client"
+vscode "ritwickdey.LiveServer"
+vscode "sainoba.px-to-rem"
+vscode "sanity-io.vscode-sanity"
+vscode "streetsidesoftware.code-spell-checker"
+vscode "uctakeoff.vscode-counter"
+vscode "unifiedjs.vscode-mdx"
+vscode "vintharas.learn-vim"
+vscode "vscode-icons-team.vscode-icons"
+vscode "vscodevim.vim"
+vscode "wix.vscode-import-cost"
+vscode "xabikos.JavaScriptSnippets"
+vscode "xyc.vscode-mdx-preview"
+vscode "Zignd.html-css-class-completion"
