--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,20 +1,28 @@
 tap "bufbuild/buf"
 tap "buo/cask-upgrade"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-fonts"
-tap "homebrew/core"
 tap "homebrew/services"
+tap "isen-ng/dotnet-sdk-versions"
 tap "jesseduffield/lazygit"
+tap "mongodb/brew"
 tap "ngrok/ngrok"
 tap "oven-sh/bun"
 tap "planetscale/tap"
 tap "stripe/stripe-cli"
 tap "supabase/tap"
 brew "aircrack-ng"
+brew "awscli"
+brew "bat"
+brew "blueutil"
+brew "cocoapods"
+brew "eza"
+brew "fastlane"
 brew "fd"
+brew "fzf"
 brew "gh"
 brew "git"
+brew "git-delta"
 brew "git-lfs"
 brew "gnu-sed"
 brew "unbound"
@@ -28,25 +36,40 @@ brew "mysql"
 brew "mysql-client"
 brew "neovim"
 brew "openssl@1.1"
+brew "postgresql@16"
+brew "railway"
 brew "ripgrep"
 brew "rust"
+brew "showkey"
 brew "starship"
 brew "stow"
 brew "tmux"
 brew "watchman"
 brew "wireshark"
+brew "zsh-history-substring-search"
 brew "bufbuild/buf/buf"
 brew "jesseduffield/lazygit/lazygit"
+brew "mongodb/brew/mongodb-community"
 brew "oven-sh/bun/bun"
 brew "planetscale/tap/pscale"
 brew "stripe/stripe-cli/stripe"
 brew "supabase/tap/supabase"
 cask "alacritty"
+cask "arc"
+cask "betterdisplay"
+cask "dbngin"
+cask "dotnet-sdk"
+cask "dotnet-sdk7-0-400"
 cask "font-fira-code-nerd-font"
+cask "font-geist-mono-nerd-font"
 cask "iterm2"
+cask "keycastr"
 cask "linearmouse"
 cask "ngrok"
+cask "orbstack"
+cask "pgadmin4"
 cask "raycast"
+cask "tableplus"
 cask "wezterm"
 mas "Amphetamine", id: 937984704
 mas "Keynote", id: 409183694
@@ -64,7 +87,6 @@ vscode "alefragnani.project-manager"
 vscode "astro-build.astro-vscode"
 vscode "austenc.tailwind-docs"
 vscode "bradlc.vscode-tailwindcss"
-vscode "bungcip.better-toml"
 vscode "csstools.postcss"
 vscode "DanielPriestley.poimandres-alternate"
 vscode "dbaeumer.vscode-eslint"
@@ -78,6 +100,7 @@ vscode "formulahendry.auto-close-tag"
 vscode "formulahendry.auto-rename-tag"
 vscode "formulahendry.code-runner"
 vscode "GitHub.copilot"
+vscode "GitHub.copilot-chat"
 vscode "idleberg.applescript"
 vscode "IronGeek.vscode-env"
 vscode "matt-meyers.vscode-dbml"
@@ -104,6 +127,7 @@ vscode "ritwickdey.LiveServer"
 vscode "sainoba.px-to-rem"
 vscode "sanity-io.vscode-sanity"
 vscode "streetsidesoftware.code-spell-checker"
+vscode "tamasfe.even-better-toml"
 vscode "uctakeoff.vscode-counter"
 vscode "unifiedjs.vscode-mdx"
 vscode "vintharas.learn-vim"
