--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -38,3 +38,6 @@ path = ~/.gitconfig-personal
 [includeIf "gitdir:~/Code/sina-health/**"]
 path = ~/.gitconfig-sinahealth
 
+[alias]
+	pr = "!f() { exec az repos pr \"$@\"; }; f"
+	repo = "!f() { exec az repos \"$@\"; }; f"
