--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -7,44 +7,69 @@ tap "isen-ng/dotnet-sdk-versions"
 tap "jesseduffield/lazygit"
 tap "mongodb/brew"
 tap "ngrok/ngrok"
+tap "osx-cross/arm"
+tap "osx-cross/avr"
 tap "oven-sh/bun"
 tap "planetscale/tap"
+tap "pulumi/tap"
+tap "qmk/qmk"
+tap "sst/tap"
 tap "stripe/stripe-cli"
 tap "supabase/tap"
+brew "act"
 brew "aircrack-ng"
+brew "python@3.12"
 brew "awscli"
+brew "azure-cli"
 brew "bat"
 brew "blueutil"
+brew "certbot"
 brew "cocoapods"
+brew "exiv2"
 brew "eza"
 brew "fastlane"
 brew "fd"
+brew "unbound"
+brew "gnutls"
+brew "ffmpeg"
 brew "fzf"
 brew "gh"
+brew "ghostscript"
 brew "git"
 brew "git-delta"
 brew "git-lfs"
 brew "gnu-sed"
-brew "unbound"
-brew "gnutls"
+brew "goose"
+brew "libheif"
+brew "graphicsmagick"
 brew "hashcat"
 brew "hcxtools"
+brew "htop"
 brew "lcdf-typetools"
+brew "llvm"
 brew "make"
 brew "mas"
 brew "mysql"
 brew "mysql-client"
+brew "neonctl"
 brew "neovim"
 brew "openssl@1.1"
+brew "pipx"
+brew "poppler"
 brew "postgresql@16"
+brew "postgresql@17", link: true
+brew "pyenv"
+brew "pyenv-virtualenv"
 brew "railway"
 brew "ripgrep"
 brew "rust"
 brew "showkey"
+brew "sqlc"
 brew "starship"
 brew "stow"
 brew "tmux"
 brew "watchman"
+brew "wget"
 brew "wireshark"
 brew "zsh-history-substring-search"
 brew "bufbuild/buf/buf"
@@ -52,24 +77,29 @@ brew "jesseduffield/lazygit/lazygit"
 brew "mongodb/brew/mongodb-community"
 brew "oven-sh/bun/bun"
 brew "planetscale/tap/pscale"
+brew "pulumi/tap/pulumi"
+brew "qmk/qmk/qmk"
 brew "stripe/stripe-cli/stripe"
 brew "supabase/tap/supabase"
-cask "alacritty"
 cask "arc"
 cask "betterdisplay"
 cask "dbngin"
 cask "dotnet-sdk"
-cask "dotnet-sdk7-0-400"
+cask "dotnet-sdk6-0-400"
+cask "dotnet-sdk9-preview"
 cask "font-fira-code-nerd-font"
 cask "font-geist-mono-nerd-font"
 cask "iterm2"
 cask "keycastr"
+cask "keymapp"
 cask "linearmouse"
+cask "mongodb-compass"
 cask "ngrok"
 cask "orbstack"
 cask "pgadmin4"
 cask "raycast"
 cask "tableplus"
+cask "vlc"
 cask "wezterm"
 mas "Amphetamine", id: 937984704
 mas "Keynote", id: 409183694
@@ -79,33 +109,41 @@ mas "rcmd", id: 1596283165
 mas "Save to Matter", id: 1548677272
 mas "Save to Raindrop.io", id: 1549370672
 mas "Sequel Ace", id: 1518036000
+mas "Slack", id: 803453959
 mas "Spark", id: 1176895641
 mas "Webull Desktop", id: 1334590352
-mas "WhatsApp", id: 1147396723
 mas "Xcode", id: 497799835
+mas "‎WhatsApp", id: 310633997
 vscode "alefragnani.project-manager"
 vscode "astro-build.astro-vscode"
 vscode "austenc.tailwind-docs"
 vscode "bradlc.vscode-tailwindcss"
 vscode "csstools.postcss"
-vscode "DanielPriestley.poimandres-alternate"
+vscode "danielpriestley.poimandres-alternate"
 vscode "dbaeumer.vscode-eslint"
 vscode "dsznajder.es7-react-js-snippets"
 vscode "eamodio.gitlens"
 vscode "ecmel.vscode-html-css"
-vscode "Equinusocio.vsc-material-theme"
+vscode "equinusocio.vsc-material-theme"
 vscode "equinusocio.vsc-material-theme-icons"
 vscode "esbenp.prettier-vscode"
 vscode "formulahendry.auto-close-tag"
 vscode "formulahendry.auto-rename-tag"
 vscode "formulahendry.code-runner"
-vscode "GitHub.copilot"
-vscode "GitHub.copilot-chat"
+vscode "github.copilot"
+vscode "github.copilot-chat"
 vscode "idleberg.applescript"
-vscode "IronGeek.vscode-env"
+vscode "irongeek.vscode-env"
+vscode "kishoreithadi.dotnet-core-essentials"
+vscode "leo-labs.dotnet"
+vscode "matijarmk.dotnet-core-commands"
 vscode "matt-meyers.vscode-dbml"
 vscode "mattpocock.ts-error-translator"
 vscode "ms-azuretools.vscode-docker"
+vscode "ms-dotnettools.csdevkit"
+vscode "ms-dotnettools.csharp"
+vscode "ms-dotnettools.vscode-dotnet-runtime"
+vscode "ms-python.debugpy"
 vscode "ms-python.isort"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
@@ -117,13 +155,13 @@ vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode-remote.remote-containers"
 vscode "ms-vscode.powershell"
 vscode "nhoizey.gremlins"
-vscode "Orta.vscode-twoslash-queries"
-vscode "PKief.material-icon-theme"
+vscode "orta.vscode-twoslash-queries"
+vscode "pkief.material-icon-theme"
 vscode "pmndrs.pmndrs"
-vscode "Prisma.prisma"
-vscode "Prisma.prisma-insider"
+vscode "prisma.prisma"
+vscode "prisma.prisma-insider"
 vscode "rangav.vscode-thunder-client"
-vscode "ritwickdey.LiveServer"
+vscode "ritwickdey.liveserver"
 vscode "sainoba.px-to-rem"
 vscode "sanity-io.vscode-sanity"
 vscode "streetsidesoftware.code-spell-checker"
@@ -134,6 +172,6 @@ vscode "vintharas.learn-vim"
 vscode "vscode-icons-team.vscode-icons"
 vscode "vscodevim.vim"
 vscode "wix.vscode-import-cost"
-vscode "xabikos.JavaScriptSnippets"
+vscode "xabikos.javascriptsnippets"
 vscode "xyc.vscode-mdx-preview"
-vscode "Zignd.html-css-class-completion"
+vscode "zignd.html-css-class-completion"
